--- a/Chatbot/data/nlu.yml
+++ b/Chatbot/data/nlu.yml
@@ -96,34 +96,60 @@ nlu:
     - o que é que são [palavras reservadas](answer_concept_wanted)?
     - o que são [palavras reservadas](answer_concept_wanted)?
     - o que é um [if](answer_concept_wanted)?
-    - o que é uma instrução [elif](answer_concept_wanted)?
-    - o que é a instrução [while](answer_concept_wanted)?
-    - para que serve o [else](answer_concept_wanted)?
-    - como se obtém o [tipo de uma variável](answer_concept_wanted)?
-    - que nomes podemos dar a uma [variável](answer_concept_wanted)?
-    - como se cria uma [variável global](answer_concept_wanted) dentro de uma função?
-    - como se muda o valor de uma [variável global](answer_concept_wanted) dentro de uma função?
-    - quais são os [tipos de variáveis](answer_concept_wanted)?
-    - como se converte uma [string em inteiro](answer_concept_wanted)?
-    - como se converte um [inteiro em float](answer_concept_wanted)?
+    - o que é uma [instrução elif](answer_concept_wanted)?
+    - o que é a [instrução while](answer_concept_wanted)?
     - o que é [indentação](answer_concept_wanted)?
+    - o que são [parâmetros de uma função](answer_concept_wanted)?
+    - o que é que são [parâmetros de uma função](answer_concept_wanted)?
+    - o que é o [retorno de uma função](answer_concept_wanted)?
+    - para que serve o [else](answer_concept_wanted)?
+    - para que serve uma [instrução if](answer_concept_wanted)?
+    - para que serve [Python](answer_concept_wanted)?
+    - para que serve a [instrução if](answer_concept_wanted)?
+    - para que servem as [condições else](answer_concept_wanted)?
+    - para que servem as [condições](answer_concept_wanted)?
     - para que serve a [indentação](answer_concept_wanted)?
-    - quantos espaços é a [indentação](answer_concept_wanted)?
     - para que servem os [comentários](answer_concept_wanted)?
+    - como se obtém o [tipo de uma variável](answer_concept_wanted)?
+    - como se converte uma [string em inteiro](answer_concept_wanted)?
+    - como converter uma [string em inteiro](answer_concept_wanted)?
+    - como se converter [string em inteiro](answer_concept_wanted)?
+    - como se converte um [inteiro em float](answer_concept_wanted)?
+    - como converter um [inteiro em float](answer_concept_wanted)?
     - como se fazem [comentários](answer_concept_wanted) ?
     - como podemos [comentar](answer_concept_wanted) várias linhas ao mesmo tempo?
     - como se faz a [soma](answer_concept_wanted)?
+    - como se [soma](answer_concept_wanted)?
     - como se usa o [and](answer_concept_wanted)?
-    - porque devemos aprender a [programar](answer_concept_wanted)?
-    - para que serve [Python](answer_concept_wanted)?
-    - porque devemos aprender [Python](answer_concept_wanted)?
     - como se define uma [função](answer_concept_wanted)?
-    - o que são [parâmetros](answer_concept_wanted)?
-    - o que é o [retorno](answer_concept_wanted) de uma função?
+    - como definir uma [repetição while](answer_concept_wanted)?
+    - como definir um [for](answer_concept_wanted)?
+    - porque devemos aprender a [programar](answer_concept_wanted)?
+    - porque aprender a [programar](answer_concept_wanted)?
+    - porque devemos aprender [Python](answer_concept_wanted)?
+    - porque aprender [Python](answer_concept_wanted)?
     - quando occorre o [NameError](answer_concept_wanted)?
-    - para que servem as [condições](answer_concept_wanted)?
     - qual a sintaxe de uma [condição](answer_concept_wanted)?
-    - para que serve a instrução [if](answer_concept_wanted)?
+    - qual a sintaxe de uma [condição if](answer_concept_wanted)?
+    - qual a sintaxe de uma [instrução for](answer_concept_wanted)?
+    - qual a sintaxe de um [for loop](answer_concept_wanted)?
+    - qual a sintaxe de um [while](answer_concept_wanted)?
+    - sintaxe de uma [condição if](answer_concept_wanted)?
+    - sintaxe de um [while](answer_concept_wanted)?
+    - sintaxe da [instrução else](answer_concept_wanted)
+    - sintaxe de uma [instrução else](answer_concept_wanted)
+    - sintaxe de um [for loop](answer_concept_wanted)
+    - sintaxe de [instrução else](answer_concept_wanted)
+    - sintaxe [instrução else](answer_concept_wanted)
+    - sintaxe [for](answer_concept_wanted)?
+    - quais são os [tipos de variáveis](answer_concept_wanted)?
+    - quais os [tipos de variáveis](answer_concept_wanted)?
+    - que nomes podemos dar a uma [variável](answer_concept_wanted)?
+    - que nomes podem ter as [variáveis](answer_concept_wanted)?
+    - quantos espaços é a [indentação](answer_concept_wanted)?
+    - quantos espaços pode ter o [escopo de uma função](answer_concept_wanted)?
+    - quantos espaços para o [escopo de uma função](answer_concept_wanted)?
+
 
 - intent: ask_example
   examples: |
@@ -166,4 +192,8 @@ nlu:
 #    - [Condição](error_type) [Falta dois pontos na condição](error_message)
 #    - [Condição](error_type) [Apenas uma igualdade na condição](error_message)
 #    - [Condição](error_type) [Comparação no else](error_message)
+
+- intent: EXTERNAL_CODE_MESSAGE
+  examples: |
+    - [OI](code_message_student) [OI](code_message_answer)
 # ----------------------------------------------------
