--- a/Chatbot/endpoints.yml
+++ b/Chatbot/endpoints.yml
@@ -11,8 +11,9 @@
 # https://rasa.com/docs/rasa/custom-actions
 #http://app:5055/webhook
 #http://localhost:5055/webhook
+#"http://www.32b.com.br:5055/webhook"
 action_endpoint:
-  url: "http://www.32b.com.br:5055/webhook"
+  url: "http://localhost:5055/webhook"
 
 # Tracker store which is used to store the conversations.
 # By default the conversations are stored in memory.
