--- a/Chatbot/domain.yml
+++ b/Chatbot/domain.yml
@@ -124,6 +124,11 @@ slots:
     type: text
     mappings:
       - type: custom
+
+  slot_eh_concepts_options:
+    type: text
+    mappings:
+      - type: custom
   ######################
 
 # ------------------- FORMS -------------------
@@ -218,3 +223,4 @@ actions:
 - action_eh_concepts_order                        #-> Ask the order of the concepts
 - action_eh_check_answer                          #-> Check the correctness of the student's answers
 - action_eh_further_help                          #-> Student was not clarified
+- action_eh_test_case
