--- a/Chatbot/data/nlu/nlu_input_output.yml
+++ b/Chatbot/data/nlu/nlu_input_output.yml
@@ -27,6 +27,7 @@ nlu:
     - que se quer dizer com saida de dados
     - como se imprime valor
     - como se mostra na tela um valor
+    - como se imprime um dado na tela
     - me diz como imprimo valor do teclado na tela
     - me diz como imprimir dado
     - como imprimo dado no visor
