--- a/Chatbot/data/nlu/nlu_exercícios.yml
+++ b/Chatbot/data/nlu/nlu_exercícios.yml
@@ -13,4 +13,18 @@ nlu:
     - não percebo o exercício
     - estou com dificuldade no exercicio
     - não sei como fazer o algoritmo
+    - não entendi essa questão
+    - não entendi como se faz esta questão
+    - como se faz esta questão
+    - questão
+    - não entendi o que fazer nesta questão
+    - não entendi essa questão
+    - não entendi como se faz esta pergunta
+    - como se faz esta pergunta
+    - pergunta
+    - não entendi o que fazer nesta pergunta
+    - não entendi como se faz este exerecicio
+    - como se faz este exerecicio
+    - exerecicio
+    - não entendi o que fazer neste exerecicio
 # ----------------------------------------------------
