--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,5 @@ venv/
 ./Chatbot/.rasa
 ./Chatbot/.rasa/
 .rasa/
-./Chatbot/__pycache__
-./Chatbot/__pycache__/
-./Chatbot/actions/__pycache__
-./Chatbot/actions/__pycache__/
-./Chatbot/custom/CodeInformation/__pycache__
-./Chatbot/custom/CodeInformation/__pycache__/
+# Translations
+*.pyc
